-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.1.0, Lustre 2.2.0, Lustre 2.1.1
-
None
-
1.8.5-6chaos clients, 2.1.0-17chaos servers
-
1
-
1
-
4733
With 2.1 servers, our 1.8 clients are showing an incorrect date of:
1901-12-14 12:45:52.000000000 -0800
for newly created files.
Andreas has pointed us at a patch for LU-221 that looks like the cause of the problem.
We are in production with some 2.1 servers now, so we will need a quick fix on this. The LU-221 cure may have been worse than the disease, so I am going to start a build of our tree with that commit reverted.
- is duplicated by
-
LU-1010 lfsck.sh test: e2fsck_pass1:1402: increase inode 20 badness 0 to 1
-
- Resolved
-
- is related to
-
LU-221 sanityN.sh test_4 failed
-
- Resolved
-
-
LU-5977 Remove correction for bad timestamp
-
- Resolved
-
- Trackbacks
-
Changelog 2.1
Changes from version 2.1.0 to version 2.1.1 Server support for kernels: 2.6.18274.12.1.el5 (RHEL5) 2.6.32220.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.12.1.el5 (RHEL5) 2.6.32220.el6 (RHEL6) 2.6.32.360....
-
Changelog 2.2
version 2.2.0 Support for networks: o2iblnd OFED 1.5.4 Server support for kernels: 2.6.32220.4.2.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.18.1.el5 (RHEL5) 2.6.32220.4.2.el6 (RHEL6) 2.6.32.360....